test/test_examples/syntactic_examples/syntax_error/error_statement_20.zig
// Syntax error: missing colon between id and type in variable definition

const ifj = @import("ifj24.zig"); 

pub fn main() void {
    var x ?i32 = null;
}